add_executable(new_target main.cpp
        Posicao/Posicao.cpp
        Posicao/Posicao.h
        jardim/Jardim.cpp
        jardim/Jardim.h
        Celula/Celula.cpp
        Celula/Celula.h
        Solo/Solo.cpp
        Solo/Solo.h
        Settings/Settings.h
        Solo/Planta/Planta.cpp
        Solo/Planta/Planta.h
        Solo/Planta/especies/Cacto.cpp
        Solo/Planta/especies/Cacto.h)
