cmake_minimum_required(VERSION 3.25)
project(POO_TP)

set(CMAKE_CXX_STANDARD 20)

add_executable(POO_TP main.cpp Posicao.cpp Posicao.h Solo.cpp Solo.h Celula.cpp Celula.h Jardim.cpp Jardim.h Comando.h ComandoParser.cpp ComandoParser.h Simulador.cpp Simulador.h Jardineiro.cpp Jardineiro.h Planta.cpp Planta.h Cacto.cpp Cacto.h Roseira.cpp Roseira.h ErvaDaninha.cpp ErvaDaninha.h PlantaExotica.cpp PlantaExotica.h Ferramenta.cpp Ferramenta.h Regador.cpp Regador.h Adubo.cpp Adubo.h Tesoura.cpp Tesoura.h Inventario.cpp Inventario.h SuplementoNatural.cpp SuplementoNatural.h)
